Added signin page

--- a/src/components/input/input.pcss
+++ b/src/components/input/input.pcss
@@ -1,12 +1,13 @@
-.input {
+/* .input {
   padding: 10px;
-}
+} */
 
 .input__container {
   display: flex;
   height: 38px;
   flex-direction: column;
   align-content: flex-end;
+  padding: 10px;
 }
 
 .input__label {
