--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,8 +1,14 @@
 <div class="container">
-    <form class="login-form">
-        {{> Input label="Login" }}
-        {{> Input label="Password" }}
-        {{> Button label="Sign in" type="primary" }}
-        {{> Button label="Sign up" type="link" }}
+        {{> Header text="Регистрация"}}
+    <form class="form">
+        {{> Input label="Почта" type="email" name="email" }}
+        {{> Input label="Логин" type="text" name="login" }}
+        {{> Input label="Имя" type="text" name="first_name" }}
+        {{> Input label="Фамилия" type="text" name="second_name" }}
+        {{> Input label="Телефон" type="tel" name="phone" }}
+        {{> Input label="Пароль" type="password" }}
+        {{> Input label="Пароль (ещё раз)" type="password" name="password" }}
+        {{> Button label="Зарегистрироваться" class="signin-button" name="password"}}
+        {{> Link text="Войти" }}
     </form>
 </div>
