--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -1,6 +1,11 @@
-<div class="input">
-  <label class="input__container">
-    <input class="input__element" placeholder="" type="{{type}}" />
-    <div class="input__label">{{label}}</div>
-  </label>
-</div>
+<label class="input__container">
+  <input
+    class="input__element"
+    id="{{id}}"
+    placeholder="{{placeholder}}"
+    type="{{type}}"
+    value="{{value}}"
+    name="{{name}}"
+  />
+  <div class="input__label">{{label}}</div>
+</label>
