Added chat page

--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -1,11 +1,12 @@
 <label class="input__container">
   <input
-    class="input__element"
+    class="input__element input__{{decoration}}"
     id="{{id}}"
     placeholder="{{placeholder}}"
     type="{{type}}"
     value="{{value}}"
     name="{{name}}"
+    decoration="primary"
   />
   <div class="input__label">{{label}}</div>
 </label>
