--- a/src/style.pcss
+++ b/src/style.pcss
@@ -5,6 +5,8 @@
   --text-color: #1e1e1e;
   --text-secondary-color: #999;
   --button-text-color: #fff;
+  --input-background-color: #efefef;
+  --sidebar-background-color: #fbfbfb;
 }
 
 * {
@@ -14,12 +16,27 @@
 
 body {
   font-family: "Inter", sans-serif;
-  margin: 0 auto;
 }
 
 .main {
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  font-family: "Inter", sans-serif;
+  margin: 0 auto;
+  background-color: #ccc;
+  min-height: 100vh;
+}
+
+
+/* .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-}
+  width: 1280px;
+  height: 720px;
+  background-color: #fff;
+} */
