Added profile page

--- a/src/components/addNewUserDialog/addNewUserDialog.pcss
+++ b/src/components/addNewUserDialog/addNewUserDialog.pcss
@@ -1,8 +1,8 @@
-.dialog-container-relative {
+/* .dialog-container-relative {
   position: relative;
-}
+} */
 
-.remove-text {
+/* .remove-text {
   font-size: 15px;
   text-align: center;
-}
+} */
