--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -6,7 +6,7 @@
     type="{{type}}"
     value="{{value}}"
     name="{{name}}"
-    decoration="primary"
+    {{!-- decoration="primary" --}}
   />
   <div class="input__label">{{label}}</div>
 </label>
