--- a/src/components/input/input.pcss
+++ b/src/components/input/input.pcss
@@ -32,7 +32,9 @@
   border-bottom: 1px solid var(--main-color);
 }
 
-
+.input__secondary {
+  border-bottom: 1px solid var(--input-secondary-color);
+}
 
 .input__text-error {
   transform: translateY(-7px);
