--- a/src/pages/navigate/navigate.hbs
+++ b/src/pages/navigate/navigate.hbs
@@ -1,4 +1,6 @@
 <ul>
     <li><a href="#" page="login">Login</a></li>
+    <li><a href="#" page="signin">Signin</a></li>
     <li><a href="#" page="chat">Chat</a></li>
+    <li><a href="#" page="profile">Profile</a></li>
 </ul>
