--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,14 +1,16 @@
-<div class="container">
+<div class="signin-container">
+    <div class="container">
         {{> Header text="Регистрация"}}
-    <form class="form">
-        {{> Input label="Почта" type="email" name="email" decoration="primary" }}
-        {{> Input label="Логин" type="text" name="login" decoration="primary" }}
-        {{> Input label="Имя" type="text" name="first_name" decoration="primary" }}
-        {{> Input label="Фамилия" type="text" name="second_name" decoration="primary" }}
-        {{> Input label="Телефон" type="tel" name="phone" decoration="primary" }}
-        {{> Input label="Пароль" type="password" decoration="primary" }}
-        {{> Input label="Пароль (ещё раз)" type="password" name="password" decoration="primary" }}
-        {{> Button label="Зарегистрироваться" class="signin-button" name="password" type="primary"}}
-        {{> Button label="Войти" type="link" }}
-    </form>
+        <form class="form">
+            {{> Input label="Почта" type="email" name="email" decoration="primary" }}
+            {{> Input label="Логин" type="text" name="login" decoration="primary" }}
+            {{> Input label="Имя" type="text" name="first_name" decoration="primary" }}
+            {{> Input label="Фамилия" type="text" name="second_name" decoration="primary" }}
+            {{> Input label="Телефон" type="tel" name="phone" decoration="primary" }}
+            {{> Input label="Пароль" type="password" decoration="primary" }}
+            {{> Input label="Пароль (ещё раз)" type="password" name="password" decoration="primary" }}
+            {{> Button label="Зарегистрироваться" class="signin-button" name="password" type="primary"}}
+            {{> Button label="Войти" type="link" }}
+        </form>
+    </div>
 </div>
