--- a/src/pages/signin/signin.pcss
+++ b/src/pages/signin/signin.pcss
@@ -1,3 +1,14 @@
+.signin-container {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  background-color: #fff;
+  max-width: 1280px;
+  min-height: 720px;
+  height: 100%;
+  width: 100%;
+}
+
 .container {
   display: flex;
   justify-content: center;
