--- a/src/style.pcss
+++ b/src/style.pcss
@@ -7,6 +7,7 @@
   --button-text-color: #fff;
   --input-background-color: #efefef;
   --sidebar-background-color: #fbfbfb;
+  --input-secondary-color: #eaeaea;
 }
 
 * {
