--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <div class="container">
+    <div class="login-section">
         {{> Header text="Вход"}}
         <form class="form">
             {{> Input label="Логин" type="text" name="login" decoration="primary" }}
