--- a/src/pages/login/login.pcss
+++ b/src/pages/login/login.pcss
@@ -1,7 +1,7 @@
 .login-container {
-  display: grid;
+  display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   background-color: #fff;
   max-width: 1280px;
   min-height: 720px;
@@ -9,7 +9,7 @@
   width: 100%;
 }
 
-.container {
+.login-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
