--- a/src/pages/navigate/navigate.hbs
+++ b/src/pages/navigate/navigate.hbs
@@ -3,4 +3,5 @@
     <li><a href="#" page="signin">Signin</a></li>
     <li><a href="#" page="chat">Chat</a></li>
     <li><a href="#" page="profile">Profile</a></li>
+    <li><a href="#" page="notFoundPage">404</a></li>
 </ul>
