--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,5 +1,5 @@
 <div class="signin-container">
-    <div class="container">
+    <div class="signin-section">
         {{> Header text="Регистрация"}}
         <form class="form">
             {{> Input label="Почта" type="email" name="email" decoration="primary" }}
