--- a/src/pages/signin/signin.pcss
+++ b/src/pages/signin/signin.pcss
@@ -1,7 +1,7 @@
 .signin-container {
-  display: grid;
+  display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   background-color: #fff;
   max-width: 1280px;
   min-height: 720px;
@@ -9,14 +9,10 @@
   width: 100%;
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-}
-
-.login-form {
+.signin-section {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 50px 30px 30px;
   width: 340px;
   box-shadow: 0 0 6px 0 #00000024;
