Edited readme file

--- a/src/components/chat-list-element/chat-list-element.hbs
+++ b/src/components/chat-list-element/chat-list-element.hbs
@@ -1,9 +1,5 @@
 <div class="chat-sidebar__element {{class}}">
-  <img
-    src="src/images/user-image.png"
-    alt="user-image"
-    class="sidebar__user-image"
-  />
+  <img src="images/user-image.png" alt="user-image" class="sidebar__user-image" />
   <div class="sidebar-content">
     <div class="chat-header">
       <h1 class="chat-name">{{chat-name}}</h1>
@@ -12,7 +8,7 @@
     <div class="chat-content">
       <p class="user-message">{{user-message}}</p>
       {{#if message-count}}
-        <div class="message-count">{{message-count}}</div>
+      <div class="message-count">{{message-count}}</div>
       {{/if}}
     </div>
   </div>
