--- a/src/components/dialog/dialog.pcss
+++ b/src/components/dialog/dialog.pcss
@@ -1,5 +1,5 @@
 .dialog-container {
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0, 0, 0, 0.7);
   height: 100%;
   width: 100%;
   position: absolute;
@@ -7,7 +7,7 @@
 
 .dialog {
   background-color: white;
-  border-radius: 12px ;
+  border-radius: 12px;
   position: absolute;
   left: 50%;
   top: 50%;
