--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -140,7 +140,7 @@
     </aside>
     <div class="chat-window">
         <div class="chat-window__header">
-            <img src="src\images\user-image.png" class="chat-window__user-image">
+            <img src="images/user-image.png" class="chat-window__user-image">
             <p class="chat-window__user-name">Вадим</p>
             {{> Button class="add-button" }}
         </div>
@@ -235,7 +235,7 @@
     </aside>
     <div class="chat-window">
         <div class="chat-window__header">
-            <img src="src\images\user-image.png" class="chat-window__user-image">
+            <img src="images/user-image.png" class="chat-window__user-image">
             <p class="chat-window__user-name">Вадим</p>
             {{> Button class="add-button_active" }}
         </div>
@@ -335,7 +335,7 @@
     </aside>
     <div class="chat-window">
         <div class="chat-window__header">
-            <img src="src\images\user-image.png" class="chat-window__user-image">
+            <img src="images/user-image.png" class="chat-window__user-image">
             <p class="chat-window__user-name">Вадим</p>
             {{> Button class="add-button" }}
         </div>
