--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -25,12 +25,12 @@
   display: flex;
   justify-content: end;
   padding-inline-end: 10px;
-  background: url("src/images/arrow-right.png") no-repeat right;
+  background: url("images/arrow-right.png") no-repeat right;
   width: 300px;
 }
 
 .input__chat-list {
-  background-color: var( --input-background-color);
+  background-color: var(--input-background-color);
   border-radius: 5px;
   padding: 10px;
 }
@@ -64,14 +64,14 @@
 .add-button {
   height: 15px;
   width: 3px;
-  background: url("src/images/add-button.png") no-repeat;
+  background: url("images/add-button.png") no-repeat;
 }
 
 .add-button_active {
   position: relative;
   height: 15px;
   width: 3px;
-  background: url("src/images/add-button-active.png") no-repeat;
+  background: url("images/add-button-active.png") no-repeat;
 }
 
 .chat-window__content {
@@ -92,19 +92,19 @@
 .add-user__button {
   color: var(--text-color);
   font-size: 12px;
-  background: url("src/images/add-user-button.png") no-repeat left;
+  background: url("images/add-user-button.png") no-repeat left;
   padding-inline-start: 10px;
 }
 
 .delete-user__button {
   color: var(--text-color);
   font-size: 12px;
-  background: url("src/images/delete-user-button.png") no-repeat left;
+  background: url("images/delete-user-button.png") no-repeat left;
   padding-inline-start: 10px;
 }
 
 .input__chat-window {
-  background-color: var( --input-background-color);
+  background-color: var(--input-background-color);
   border-radius: 30px;
   padding: 10px;
 }
@@ -147,7 +147,7 @@
 }
 
 .push-button {
-  background: url(src/images/circle-arrow-right.png) no-repeat;
+  background: url("images/circle-arrow-right.png") no-repeat;
   width: 28px;
   height: 28px;
   align-self: center;
