--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,6 +1,6 @@
 <div class="login-container">
     <div class="login-section">
-        {{> Header text="Вход"}}
+        <h2 class="login__header">Вход</h2>
         <form class="form">
             {{> Input label="Логин" type="text" name="login" decoration="primary" }}
             {{> Input label="Пароль" type="password" name="password" decoration="primary" }}
