--- a/src/pages/login/login.pcss
+++ b/src/pages/login/login.pcss
@@ -19,9 +19,12 @@
   border-radius: 12px;
 }
 
-.header {
+.login__header {
   text-align: center;
   margin-block-end: 40px;
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--text-color);
 }
 
 .form {
