--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,6 +1,7 @@
 <div class="signin-container">
     <div class="signin-section">
-        {{> Header text="Регистрация"}}
+        <h2 class="signin__header">Регистрация</h2>
+        <h2></h2>
         <form class="form">
             {{> Input label="Почта" type="email" name="email" decoration="primary" }}
             {{> Input label="Логин" type="text" name="login" decoration="primary" }}
