--- a/src/pages/signin/signin.pcss
+++ b/src/pages/signin/signin.pcss
@@ -9,6 +9,14 @@
   width: 100%;
 }
 
+.signin__header {
+  text-align: center;
+  margin-block-end: 40px;
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--text-color);
+}
+
 .signin-section {
   display: flex;
   flex-direction: column;
